--- a/html/index.html
+++ b/html/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>乐评 · 一言 API</title>
-    <meta name="keywords" content="乐评,网易云热评,网易云热评Api,一言">
-    <meta name="description" content="乐评(comments.hk)是一个随机分发网易云热评的接口，自动采集热评。你能在这倾听别人的故事，亦或许是你的故事。">
+    <title>乐评 · 一言 API xmb.xyz</title>
+    <meta name="keywords" content="乐评,网易云热评,网易云热评Api,一言,xmb.xyz">
+    <meta name="description" content="乐评(comments.xmb.xyz)是一个随机分发网易云热评的接口，自动采集热评。你能在这倾听别人的故事，亦或许是你的故事。">
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_1151154_sknokr1xffs.css">
     <style>
@@ -166,6 +166,15 @@
         }
     </style>
     <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-83030921-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-83030921-2');
+    </script>
+    <script data-ad-client="ca-pub-9850570677769819" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
     <div class="container">
